# lapstrake

./: .gitignore  Cargo.toml  config.csv  data.csv  data.csv.original  planks.csv  readme.md  rustfmt.toml
input/: config.csv
src/: catmullrom.rs  draw.rs  error.rs  hull.rs  lib.rs  load.rs  main.rs  plank.rs  render_2d.rs  render_3d.rs  spec.rs  spline.rs  station.rs  unit.rs  util.rs
tests/good_models/: test_dot_sphere.scad  test_path_line_dots.scad  test_path_surface.scad  test_surface.scad
