[package]
name = "lapstrake"
version = "0.1.0"
authors = ["e-matteson <e.r.matteson@gmail.com>"]

[dependencies]

svg = "*"
csv = "*"
failure = "*"

scad-dots = {git = "https://github.com/e-matteson/scad-dots.git"}
scad-dots-derive = { git = "https://github.com/e-matteson/scad-dots-derive.git" }
# scad-dots = { path = "../scad-dots" }
# scad-dots-derive = { path = "../scad-dots/scad-dots-derive"}
